--- a/src/inputs/datepicker/datepicker.template.pug
+++ b/src/inputs/datepicker/datepicker.template.pug
@@ -3,5 +3,5 @@ mat-form-field
 	//- input(matInput, [formControl]='fieldData.inputFormControl', [placeholder]='fieldData.placeholder')
 	input(matInput, [matDatepicker]='picker', [placeholder]='fieldData.placeholder', [formControl]='fieldData.inputFormControl')
 	mat-datepicker-toggle(matSuffix, [for]='picker')
-	mat-datepicker(#picker)
+	mat-datepicker#picker()
 	include ../base/baseInput.commonElementsTemplate.pug
