--- a/test/app/pages/home/home.template.pug
+++ b/test/app/pages/home/home.template.pug
@@ -6,5 +6,7 @@
 		rui-datepicker([fieldData]='testDatepickerFieldData')
 		rui-file-input([fieldData]='testFileInputFieldData')
 		rui-input([fieldData]='testInputFieldData')
+		div
+			rui-select([fieldData]='testSelectFieldData')
 		rui-slide-toggle([fieldData]='testSlideToggleFieldData')
 		rui-textarea([fieldData]='testTextAreaFieldData')
