--- a/src/inputs/datepicker/datepicker.template.pug
+++ b/src/inputs/datepicker/datepicker.template.pug
@@ -1,5 +1,5 @@
 doctype html
-mat-form-field
+mat-form-field.rui-input-container
 	//- input(matInput, [formControl]='fieldData.inputFormControl', [placeholder]='fieldData.placeholder')
 	input(matInput, [matDatepicker]='picker', [placeholder]='fieldData.placeholder', [formControl]='fieldData.inputFormControl')
 	mat-datepicker-toggle(matSuffix, [for]='picker')
