--- a/src/inputs/checkbox/checkbox.template.pug
+++ b/src/inputs/checkbox/checkbox.template.pug
@@ -1,3 +1,3 @@
-div
+div.rui-input-container
 	mat-checkbox([formControl]='fieldData.inputFormControl') {{fieldData.placeholder}}
 	include ../base/baseInput.commonElementsTemplate.pug
