--- a/src/inputs/autocomplete/autocomplete.template.pug
+++ b/src/inputs/autocomplete/autocomplete.template.pug
@@ -1,17 +1,6 @@
 doctype html
-mat-form-field.rui-input-container
-	input(
-		*ngIf='!fieldData.hasChips',
-		matInput,
-		type='text',
-		[placeholder]='fieldData.placeholder',
-		[formControl]='searchBox',
-		[matAutocomplete]='autocompleteElement',
-		[attr.autocomplete]='noAutofillAttr',
-		(focus)='onFocus()',
-		(blur)='onBlur()'
-	)
-	mat-chip-list(*ngIf='fieldData.hasChips', #chipList)
+mat-form-field.rui-input-container(*ngIf='fieldData.hasChips')
+	mat-chip-list(#chipList)
 		mat-chip(
 			*ngFor='let chip of selectedChips; let i = index',
 			[selectable]='false',
@@ -20,20 +9,40 @@ mat-form-field.rui-input-container
 		)
 			| {{chip.text}}
 			mat-icon(matChipRemove) cancel
-		input(
-			matInput,
-			type='text',
-			#chipSearchBox,
-			[placeholder]='fieldData.placeholder',
-			[formControl]='searchBox',
-			[matAutocomplete]='autocompleteElement',
-			[matChipInputFor]='chipList',
-			[matChipInputAddOnBlur]='onBlur',
-			[attr.autocomplete]='noAutofillAttr',
-			(focus)='onFocus()',
-			(blur)='onBlur()'
-		)
-	mat-hint(*ngIf=`fieldData.hint !== ''`) {{fieldData.hint}}
+	input(
+		matInput,
+		type='text',
+		#chipSearchBox,
+		[attr.autocomplete]='noAutofillAttr',
+		[formControl]='searchBox',
+		[matAutocomplete]='autocompleteElement',
+		[matChipInputFor]='chipList',
+		[matChipInputAddOnBlur]='onBlur',
+		[placeholder]='fieldData.placeholder',
+		(focus)='onFocus()',
+		(blur)='onBlur()'
+	)
+	mat-hint(*ngIf=`fieldData.hint && (fieldData.hint !== '')`) {{fieldData.hint}}
+	mat-error(*ngIf='searchBox.invalid && (searchBox.dirty || searchBox.touched) && searchBox.errors')
+		span(*ngFor='let errorKey of JSObject.keys(searchBox.errors)') {{errorMessages[errorKey]}}
+	mat-autocomplete(#autocompleteElement='matAutocomplete')
+		mat-option(
+			*ngFor='let item of filteredSelectList; let i = index',
+			[value]='item.text',
+			(onSelectionChange)='onSelectionChange($event, item.value, i)'
+		) {{item.text}}
+mat-form-field.rui-input-container(*ngIf='!fieldData.hasChips')
+	input(
+		matInput,
+		type='text',
+		[attr.autocomplete]='noAutofillAttr',
+		[formControl]='searchBox',
+		[matAutocomplete]='autocompleteElement',
+		[placeholder]='fieldData.placeholder',
+		(focus)='onFocus()',
+		(blur)='onBlur()'
+	)
+	mat-hint(*ngIf=`fieldData.hint && (fieldData.hint !== '')`) {{fieldData.hint}}
 	mat-error(*ngIf='searchBox.invalid && (searchBox.dirty || searchBox.touched) && searchBox.errors')
 		span(*ngFor='let errorKey of JSObject.keys(searchBox.errors)') {{errorMessages[errorKey]}}
 	mat-autocomplete(#autocompleteElement='matAutocomplete')
