--- a/test/app/pages/home/home.template.pug
+++ b/test/app/pages/home/home.template.pug
@@ -5,6 +5,8 @@
 		div(fxLayout='row')
 			div(fxFlex='80px')
 				rui-autocomplete([fieldData]='testAutocompleteWithChipsFieldData')
+		div(fxLayout='row')
+			input(type='button', (click)='populateChips()', value='Populate Chips')
 		rui-checkbox([fieldData]='testCheckboxFieldData')
 		rui-datepicker([fieldData]='testDatepickerFieldData')
 		rui-file-input([fieldData]='testFileInputFieldData')
