--- a/test/app/pages/home/home.template.pug
+++ b/test/app/pages/home/home.template.pug
@@ -2,6 +2,7 @@
 	h1 Test
 	div
 		rui-autocomplete([fieldData]='testAutocompleteFieldData')
+		rui-autocomplete([fieldData]='testAutocompleteSlaveFieldData')
 		div(fxLayout='row')
 			div(fxFlex='80px')
 				rui-autocomplete([fieldData]='testAutocompleteWithChipsFieldData')
