--- a/test/app/pages/home/home.template.pug
+++ b/test/app/pages/home/home.template.pug
@@ -11,6 +11,7 @@
 		rui-checkbox([fieldData]='testCheckboxFieldData')
 		rui-datepicker([fieldData]='testDatepickerFieldData')
 		rui-file-input([fieldData]='testFileInputFieldData')
+		rui-file-input([fieldData]='testFileInput2FieldData')
 		rui-input([fieldData]='testInputFieldData')
 		div
 			rui-select([fieldData]='testSelectFieldData')
