--- a/src/inputs/file/file.template.pug
+++ b/src/inputs/file/file.template.pug
@@ -5,7 +5,7 @@ doctype html
 	.file-preview.image-container(*ngIf='fieldData.preview && (backgroundImageUrl !== "")', [ngStyle]='{"background-image": backgroundImageUrl, width: previewWidth, height: previewHeight}')
 	div.button-wrapper([ngStyle]='{width: fieldData.hideFileName ? previewWidth : "auto"}')
 		label.mat-raised-button([ngStyle]='{width: fieldData.hideFileName ? "100%" : "auto"}', (click)='onLabelClick()') Choose File
-		span.file-name(*ngIf='!fieldData.hideFileName') {{fieldData.inputFormControl.value === '' ? 'No file chosen...' : fileName}}
+		span.file-name(*ngIf='!fieldData.hideFileName') {{!fieldData.inputFormControl.value || (fieldData.inputFormControl.value === '') ? 'No file chosen...' : fileName}}
 		input.actual-file-input(#fileInput, type='file', (change)='onFileChange($event)')
 	div.errors-container
 		include ../base/baseInput.commonElementsTemplate.pug
