--- a/src/components/inputInjector/inputInjector.template.pug
+++ b/src/components/inputInjector/inputInjector.template.pug
@@ -6,3 +6,4 @@ rui-input(*ngIf='regularInputTypes.indexOf(type) !== -1', [fieldData]='fieldData
 rui-select(*ngIf='type === "select"', [fieldData]='fieldData')
 rui-slide-toggle(*ngIf='type === "slideToggle"', [fieldData]='fieldData')
 rui-textarea(*ngIf='type === "textarea"', [fieldData]='fieldData')
+rui-wysiwyg(*ngIf='type === "wysiwyg"', [fieldData]='fieldData')
