--- a/test/app/pages/home/home.template.pug
+++ b/test/app/pages/home/home.template.pug
@@ -1,6 +1,6 @@
 .page-content(fxLayout='column', fxFill, fxLayoutAlign='start stretch')
 	h1 Ramster UI Forms Test Page
-	mat-horizontal-stepper
+	mat-horizontal-stepper([selectedIndex]='currentTabIndex')
 		mat-step(label='Direct display')
 			rui-autocomplete([fieldData]='testAutocompleteFieldData')
 			rui-autocomplete([fieldData]='testAutocompleteSlaveFieldData')
@@ -36,8 +36,10 @@
 			rui-input-injector(*ngFor='let item of generatedFormConfig', [type]='item.type', [fieldData]='generatedFormFieldData[item.name]')
 
 		mat-step(label='FormBuilder + Positioning')
-			.positioning-test(fxLayout='row')
+			form.positioning-test(fxLayout='row', [formGroup]='generatedForm', (ngSumbit)='saveForm()')
 				div(fxLayout='column', fxFill)
+					div(fxLayout='row')
+						button(type='submit') Save
 					div(*ngFor='let row of generatedFormLayout', fxLayout='row', fxFlexOffset='20px')
 						div(*ngFor='let column of row', fxLayout='column', [fxFlex]='column.colSize', [fxFlexOffset]='column.colOffset')
 							div(*ngIf='column.innerRows', fxLayout='row', fxFlexOffset='-20px')
