--- a/src/inputs/textarea/textarea.template.pug
+++ b/src/inputs/textarea/textarea.template.pug
@@ -3,6 +3,7 @@ mat-form-field.rui-input-container
 		matInput,
 		[formControl]='fieldData.inputFormControl',
 		[placeholder]='fieldData.placeholder',
+		[readonly]='fieldData.readOnly',
 		cdkTextareaAutosize,
 		[cdkAutosizeMinRows]='minRows',
 		[cdkAutosizeMaxRows]='maxRows'
