--- a/src/inputs/input/input.template.pug
+++ b/src/inputs/input/input.template.pug
@@ -1,3 +1,9 @@
 mat-form-field.rui-input-container
-	input(matInput, [formControl]='fieldData.inputFormControl', [placeholder]='fieldData.placeholder', [type]='fieldData.type')
+	input(
+		matInput,
+		[formControl]='fieldData.inputFormControl',
+		[placeholder]='fieldData.placeholder',
+		[readonly]='fieldData.readOnly',
+		[type]='fieldData.type'
+	)
 	include ../base/baseInput.commonElementsTemplate.pug
