--- a/src/inputs/select/select.template.pug
+++ b/src/inputs/select/select.template.pug
@@ -1,4 +1,7 @@
 mat-form-field.rui-input-container
-	mat-select([placeholder]='fieldData.placeholder', [formControl]='fieldData.inputFormControl') 
+	mat-select(
+		[formControl]='fieldData.inputFormControl',
+		[placeholder]='fieldData.placeholder'
+	) 
 		mat-option(*ngFor='let option of fieldData.selectList', [value]="option.value") {{option.text}}
 	include ../base/baseInput.commonElementsTemplate.pug
