--- a/src/inputs/input/input.template.pug
+++ b/src/inputs/input/input.template.pug
@@ -2,6 +2,8 @@ mat-form-field.rui-input-container
 	input(
 		matInput,
 		[formControl]='fieldData.inputFormControl',
+		[max]='fieldData.max',
+		[min]='fieldData.min',
 		[placeholder]='fieldData.placeholder',
 		[readonly]='fieldData.readOnly',
 		[type]='fieldData.type'
