--- a/test/app/pages/home/home.template.pug
+++ b/test/app/pages/home/home.template.pug
@@ -14,6 +14,7 @@
 			rui-file-input([fieldData]='testFileInputFieldData')
 			rui-file-input([fieldData]='testFileInput2FieldData')
 			rui-input([fieldData]='testInputFieldData')
+			rui-input([fieldData]='testNumberInputFieldData')
 			div
 				rui-select([fieldData]='testSelectFieldData')
 			rui-slide-toggle([fieldData]='testSlideToggleFieldData')
