--- a/src/inputs/file/file.styles.css
+++ b/src/inputs/file/file.styles.css
@@ -16,8 +16,9 @@
 .file-preview {
   margin-top: 10px;
   margin-bottom: 10px;
-  border: 1px solid #ababab;
-  border-radius: 50%; }
+  border: 1px solid #ababab; }
+  .file-preview.is-round {
+    border-radius: 50%; }
 
 .button-wrapper {
   margin-top: 7px; }
