--- a/src/inputs/file/file.template.pug
+++ b/src/inputs/file/file.template.pug
@@ -6,6 +6,7 @@ doctype html
 		label.placeholder {{fieldData.placeholder}}
 	.file-preview.image-container(
 		*ngIf='fieldData.preview && (backgroundImageUrl !== "")',
+		[ngClass]='{"is-round": previewIsRound}',
 		[ngStyle]='{"background-image": backgroundImageUrl, width: previewWidth, height: previewHeight}'
 	)
 	div.button-wrapper([ngStyle]='{width: fieldData.hideFileName ? previewWidth : "auto"}')
