--- a/src/inputs/file/file.styles.scss
+++ b/src/inputs/file/file.styles.scss
@@ -19,6 +19,9 @@
 	margin-top: 10px;
 	margin-bottom: 10px;
 	border: 1px solid #ababab;
+	cursor: pointer;
+	background-size: cover;
+	background-position: center;
 	&.is-round {
 		border-radius: 50%;
 	}
