--- a/src/inputs/file/file.template.pug
+++ b/src/inputs/file/file.template.pug
@@ -7,15 +7,17 @@ doctype html
 	.file-preview.image-container(
 		*ngIf='fieldData.preview && (backgroundImageUrl !== "")',
 		[ngClass]='{"is-round": previewIsRound}',
-		[ngStyle]='{"background-image": backgroundImageUrl, width: previewWidth, height: previewHeight}'
+		[ngStyle]='{"background-image": backgroundImageUrl, width: previewWidth, height: previewHeight}',
+		(click)=' onLabelClick()'
 	)
 	div.button-wrapper([ngStyle]='{width: fieldData.hideFileName ? previewWidth : "auto"}')
 		label.mat-raised-button(
+			*ngIf='showChooseFileButton',
 			[ngStyle]='{width: fieldData.hideFileName ? "100%" : "auto"}',
 			(click)='onLabelClick()'
 		) Choose File
 		span.file-name(
-			*ngIf='!fieldData.hideFileName'
+			*ngIf='!fieldData.hideFileName && showChooseFileButton'
 		) {{!fieldData.inputFormControl.value || (fieldData.inputFormControl.value === '') ? 'No file chosen...' : fileName}}
 		input.actual-file-input(#fileInput, type='file', (change)='onFileChange($event)')
 	div.errors-container
