--- a/src/inputs/file/file.styles.css
+++ b/src/inputs/file/file.styles.css
@@ -13,6 +13,16 @@
   transition: transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), color 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), width 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
   color: rgba(0, 0, 0, 0.54); }
 
+.cancel-button {
+  float: right;
+  width: 20px;
+  height: 20px;
+  margin-right: -10px;
+  border-radius: 50%;
+  background-size: contain;
+  background-position: center;
+  cursor: pointer; }
+
 .file-preview {
   margin-top: 10px;
   margin-bottom: 10px;
