--- a/src/inputs/file/file.styles.scss
+++ b/src/inputs/file/file.styles.scss
@@ -15,6 +15,17 @@
 	color: rgba(0,0,0,.54);
 }
 
+.cancel-button {
+	float: right;
+	width: 20px;
+	height: 20px;
+	margin-right: -10px;
+	border-radius: 50%;
+	background-size: contain;
+	background-position: center;
+	cursor: pointer;
+}
+
 .file-preview {
 	margin-top: 10px;
 	margin-bottom: 10px;
