--- a/src/inputs/datepicker/datepicker.template.pug
+++ b/src/inputs/datepicker/datepicker.template.pug
@@ -1,7 +1,7 @@
 doctype html
 mat-form-field.rui-input-container
 	input(
-		#pickerInput,
+		#inputElement,
 		matInput,
 		[formControl]='fieldData.inputFormControl',
 		[matDatepicker]='picker',
