--- a/src/inputs/input/input.template.pug
+++ b/src/inputs/input/input.template.pug
@@ -1,5 +1,7 @@
+doctype html
 mat-form-field.rui-input-container
 	input(
+		#inputElement,
 		matInput,
 		[formControl]='fieldData.inputFormControl',
 		[max]='fieldData.max',
