--- a/src/inputs/textarea/textarea.template.pug
+++ b/src/inputs/textarea/textarea.template.pug
@@ -1,5 +1,7 @@
+doctype html
 mat-form-field.rui-input-container
 	textarea(
+		#inputElement,
 		matInput,
 		[formControl]='fieldData.inputFormControl',
 		[placeholder]='fieldData.placeholder',
