--- a/src/inputs/select/select.template.pug
+++ b/src/inputs/select/select.template.pug
@@ -1,5 +1,7 @@
+doctype html
 mat-form-field.rui-input-container
 	mat-select(
+		#inputElement,
 		[formControl]='fieldData.inputFormControl',
 		[placeholder]='fieldData.placeholder'
 	) 
