--- a/src/inputs/slideToggle/slideToggle.template.pug
+++ b/src/inputs/slideToggle/slideToggle.template.pug
@@ -1,3 +1,4 @@
+doctype html
 div.rui-input-container
-	mat-slide-toggle([formControl]='fieldData.inputFormControl') {{fieldData.placeholder}}
+	mat-slide-toggle(#inputElement, [formControl]='fieldData.inputFormControl') {{fieldData.placeholder}}
 	include ../base/baseInput.commonElementsTemplate.pug
