--- a/test/app/pages/home/home.template.pug
+++ b/test/app/pages/home/home.template.pug
@@ -1,8 +1,9 @@
+doctype html
 .page-content(fxLayout='column', fxFill, fxLayoutAlign='start stretch')
 	h1 Ramster UI Forms Test Page
 	mat-horizontal-stepper([selectedIndex]='currentTabIndex')
 		mat-step(label='Direct display')
-			rui-autocomplete([fieldData]='testAutocompleteFieldData')
+			rui-autocomplete(#autocompleMasterInput, [fieldData]='testAutocompleteFieldData')
 			rui-autocomplete([fieldData]='testAutocompleteSlaveFieldData')
 			div(fxLayout='row')
 				div(fxFlex='80px')
@@ -13,7 +14,7 @@
 			rui-datepicker([fieldData]='testDatepickerFieldData')
 			rui-file-input([fieldData]='testFileInputFieldData')
 			rui-file-input([fieldData]='testFileInput2FieldData')
-			rui-input([fieldData]='testInputFieldData')
+			rui-input(#regularInput, [fieldData]='testInputFieldData')
 			rui-input([fieldData]='testNumberInputFieldData')
 			div
 				rui-select([fieldData]='testSelectFieldData')
