--- a/src/inputs/select/select.template.pug
+++ b/src/inputs/select/select.template.pug
@@ -3,6 +3,7 @@ mat-form-field.rui-input-container(
 	[floatLabel]='fieldData.floatLabel',
 	[hideRequiredMarker]='fieldData.hideRequiredMarker'
 )
+	mat-label(*ngIf='fieldData.label') {{ fieldData.label }}
 	mat-select(
 		#inputElement,
 		[formControl]='fieldData.inputFormControl',
