--- a/src/inputs/textarea/textarea.template.pug
+++ b/src/inputs/textarea/textarea.template.pug
@@ -3,6 +3,7 @@ mat-form-field.rui-input-container(
 	[floatLabel]='fieldData.floatLabel',
 	[hideRequiredMarker]='fieldData.hideRequiredMarker'
 )
+	mat-label(*ngIf='fieldData.label') {{ fieldData.label }}
 	textarea(
 		#inputElement,
 		matInput,
