fixed searchonvaluechange, updated testApp

--- a/test/app/pages/home/home.template.pug
+++ b/test/app/pages/home/home.template.pug
@@ -5,6 +5,7 @@ doctype html
 		mat-step(label='Direct display')
 			rui-autocomplete(#autocompleMasterInput, [fieldData]='testAutocompleteFieldData')
 			rui-autocomplete([fieldData]='testAutocompleteSlaveFieldData')
+			rui-autocomplete([fieldData]='testAutocompleteOnChangeFieldData')
 			div(fxLayout='row')
 				div(fxFlex='80px')
 					rui-autocomplete([fieldData]='testAutocompleteWithChipsFieldData')
