--- a/src/inputs/autocomplete/autocomplete.template.pug
+++ b/src/inputs/autocomplete/autocomplete.template.pug
@@ -14,6 +14,7 @@ mat-form-field.rui-input-container(
 		[matAutocomplete]='autocompleteElement',
 		[matChipInputFor]='chipList',
 		[matChipInputAddOnBlur]='onBlur',
+		[name]='noAutofillName',
 		[placeholder]='fieldData.placeholder',
 		[readonly]='fieldData.readOnly',
 		(focus)='onFocus()',
@@ -50,6 +51,7 @@ mat-form-field.rui-input-container(
 		type='text',
 		[formControl]='searchBox',
 		[matAutocomplete]='autocompleteElement',
+		[name]='noAutofillName',
 		[placeholder]='fieldData.placeholder',
 		[readonly]='fieldData.readOnly',
 		(focus)='onFocus()',
