--- a/src/inputs/file/file.styles.css
+++ b/src/inputs/file/file.styles.css
@@ -32,6 +32,18 @@
   background-position: center; }
   .file-preview.is-round {
     border-radius: 50%; }
+  .file-preview.drop-zone-active {
+    border: 1px dashed #ababab; }
+  .file-preview .drop-zone-active-text {
+    display: inline-block;
+    width: 50%;
+    height: 50%;
+    margin-left: 25%;
+    margin-top: 25%;
+    text-align: center; }
+    .file-preview .drop-zone-active-text p {
+      margin: 0;
+      padding: 0; }
 
 .button-wrapper {
   margin-top: 7px; }
